src/test/testdata/filetypes/skin/inspections/missingPropertyInspectionWithTags.skin
{

  BitmapFont: {
    default: <error descr="Property 'file' is missing.">{

}</error>,
oke: {
file: file
}
}

TintedDrawable: {
default:
<error descr="Property 'color' is missing."><error descr="Property 'name' is missing.">{

}</error></error>,

},

Tag4: {
z: {
m: [
{
textButtonStyle:
{font: <error descr="Property 'file' is missing.">{}</error>
}

}
]
  },
  x: {
  tds: [
<error descr="Property 'color' is missing."><error descr="Property 'name' is missing.">{

}</error></error>,

<error descr="Property 'color' is missing.">{
name: yes
}</error>,
{
color: {}
name: yes
}
]
  }
  }

  TintedDrawable: {
  /*
   * @Suppress("NonExistingInspection")
   * @Suppress( "   MissingProperty  "   )
   */
  default:
  {

  },

},

}